--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p {
   bottom: 20px;
   right: 20px;
   z-index: 9999;
-  background: red;
+  background: #ff7aa2;
   color: white;
   font-size: 16px;
   padding: 15px 20px;
